5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4144/executions/1638_2450.log
== TEST (2019-04-13 14:15:10) 
-- CODE:
a =input("digite o nome: ")
b =input("digite outro nome: ")
if (a.upper() < b):
	print(a)
else:
	print(b)

-- OUTPUT:
Ada
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 14:16:35) 
-- CODE:
a =input("digite o nome: ")
b =input("digite outro nome: ")
if (a < b):
	print(a.upper())
	print(b.upper())
else:
	print(b.upper())
	print(a.upper())
	

-- OUTPUT:
ADA
LEON
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 14:16:53) 
-- CODE:
a =input("digite o nome: ")
b =input("digite outro nome: ")
if (a < b):
	print(a.upper())
	print(b.upper())
else:
	print(b.upper())
	print(a.upper())
	

-- OUTPUT:
ADA
LEON
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-13 14:17:06) 
-- CODE:
a =input("digite o nome: ")
b =input("digite outro nome: ")
if (a < b):
	print(a.upper())
	print(b.upper())
else:
	print(b.upper())
	print(a.upper())
	

-- EXECUTION TIME:
0.153969
-- TEST CASE 1:
---- input:
Ada
Leon
---- correct output:
Ada
Leon
---- user output:
ADA
LEON
-- TEST CASE 2:
---- input:
Marcos
Demetrius
---- correct output:
Demetrius
Marcos
---- user output:
DEMETRIUS
MARCOS
-- TEST CASE 3:
---- input:
WILSON
george
---- correct output:
george
WILSON
---- user output:
WILSON
GEORGE
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 14:17:20) 
-- CODE:
a =input("digite o nome: ")
b =input("digite outro nome: ")
if (a < b):
	print(a.upper())
	print(b.upper())
else:
	print(b.upper())
	print(a.upper())
	

-- OUTPUT:
ADA
LEON
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 14:28:06) 
-- CODE:
nome1 =input("digite o nome: ")
nome2 =input("digite outro nome: ")
if (nome1 < nome2):
	print(nome1)
	print(nome2)
else:
	print(nome2)
	print(nome1)

-- OUTPUT:
Ada
Leon
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 14:32:07) 
-- CODE:
nome1 =input("digite o nome: ")
nome2 =input("digite outro nome: ")
if (nome1 < nome2):
	print(nome1.upper())
	print(nome2.upper())
else:
	print(nome2.upper())
	print(nome1.upper())

-- OUTPUT:
ADA
LEON
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-13 14:32:18) 
-- CODE:
nome1 =input("digite o nome: ")
nome2 =input("digite outro nome: ")
if (nome1 < nome2):
	print(nome1.upper())
	print(nome2.upper())
else:
	print(nome2.upper())
	print(nome1.upper())

-- EXECUTION TIME:
0.127774
-- TEST CASE 1:
---- input:
Ada
Leon
---- correct output:
Ada
Leon
---- user output:
ADA
LEON
-- TEST CASE 2:
---- input:
Marcos
Demetrius
---- correct output:
Demetrius
Marcos
---- user output:
DEMETRIUS
MARCOS
-- TEST CASE 3:
---- input:
WILSON
george
---- correct output:
george
WILSON
---- user output:
WILSON
GEORGE
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 14:32:56) 
-- CODE:
nome1 =input("digite o nome: ")
nome2 =input("digite outro nome: ")
if (nome1 < nome2):
	print(nome1)
	print(nome2.upper())
else:
	print(nome2)
	print(nome1.upper())

-- OUTPUT:
Ada
LEON
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 14:33:07) 
-- CODE:
nome1 =input("digite o nome: ")
nome2 =input("digite outro nome: ")
if (nome1 < nome2):
	print(nome1)
	print(nome2.upper())
else:
	print(nome2)
	print(nome1.upper())

-- OUTPUT:
Ada
LEON
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-13 14:33:20) 
-- CODE:
nome1 =input("digite o nome: ")
nome2 =input("digite outro nome: ")
if (nome1 < nome2):
	print(nome1)
	print(nome2.upper())
else:
	print(nome2)
	print(nome1.upper())

-- EXECUTION TIME:
0.195431
-- TEST CASE 1:
---- input:
Ada
Leon
---- correct output:
Ada
Leon
---- user output:
Ada
LEON
-- TEST CASE 2:
---- input:
Marcos
Demetrius
---- correct output:
Demetrius
Marcos
---- user output:
Demetrius
MARCOS
-- TEST CASE 3:
---- input:
WILSON
george
---- correct output:
george
WILSON
---- user output:
WILSON
GEORGE
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 14:33:34) 
-- CODE:
nome1 =input("digite o nome: ")
nome2 =input("digite outro nome: ")
if (nome1 < nome2):
	print(nome1)
	print(nome2.upper())
else:
	print(nome2)
	print(nome1.upper())

-- OUTPUT:
Ada
LEON
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 14:33:56) 
-- CODE:
nome1 =input("digite o nome: ")
nome2 =input("digite outro nome: ")
if (nome1 < nome2):
	print(nome1)
	print(nome2.upper())
else:
	print(nome2)
	print(nome1.upper())

-- OUTPUT:
Ada
LEON
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 14:36:00) 
-- CODE:
nome1 =input("digite o nome: ")
nome2 =input("digite outro nome: ")
if (nome1 < nome2):
	print(nome1)
	print(nome2)
if (nome2 < nome1):
	print(nome2)
	print(nome1)

-- OUTPUT:
Ada
Leon
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 14:41:42) 
-- CODE:
nome1 =input("digite o nome: ")
nome2 =input("digite outro nome: ")
if (nome1.upper() < nome2.upper()):
	print(nome1)
	print(nome2)
if (nome2 < nome1):
	print(nome2)
	print(nome1)

-- OUTPUT:
Ada
Leon
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 14:42:30) 
-- CODE:
nome1 =input("digite o nome: ")
nome2 =input("digite outro nome: ")
if (nome1.upper() < nome2.upper()):
	print(nome1)
	print(nome2)
else:
	print(nome2)
	print(nome1)

-- OUTPUT:
Ada
Leon
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 14:42:42) 
-- CODE:
nome1 =input("digite o nome: ")
nome2 =input("digite outro nome: ")
if (nome1.upper() < nome2.upper()):
	print(nome1)
	print(nome2)
else:
	print(nome2)
	print(nome1)

-- OUTPUT:
Ada
Leon
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 14:43:34) 
-- CODE:
nome1 =input("digite o nome: ")
nome2 =input("digite outro nome: ")
if (nome1 < nome2):
	print(nome1.upper())
	print(nome2.upper())
else:
	print(nome2.upper())
	print(nome1.upper())

-- OUTPUT:
ADA
LEON
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-13 14:43:44) 
-- CODE:
nome1 =input("digite o nome: ")
nome2 =input("digite outro nome: ")
if (nome1 < nome2):
	print(nome1.upper())
	print(nome2.upper())
else:
	print(nome2.upper())
	print(nome1.upper())

-- EXECUTION TIME:
0.290122
-- TEST CASE 1:
---- input:
Ada
Leon
---- correct output:
Ada
Leon
---- user output:
ADA
LEON
-- TEST CASE 2:
---- input:
Marcos
Demetrius
---- correct output:
Demetrius
Marcos
---- user output:
DEMETRIUS
MARCOS
-- TEST CASE 3:
---- input:
WILSON
george
---- correct output:
george
WILSON
---- user output:
WILSON
GEORGE
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 14:44:21) 
-- CODE:
nome1 =input("digite o nome: ")
nome2 =input("digite outro nome: ")
if (nome1 < nome2):
	print(nome1)
	print(nome2.upper())
else:
	print(nome2.upper())
	print(nome1)

-- OUTPUT:
Ada
LEON
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 14:44:54) 
-- CODE:
nome1 =input("digite o nome: ")
nome2 =input("digite outro nome: ")
if (nome1 < nome2):
	print(nome1)
	print(nome2.upper())
else:
	print(nome2)
	print(nome1.upper())

-- OUTPUT:
Ada
LEON
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 14:45:07) 
-- CODE:
nome1 =input("digite o nome: ")
nome2 =input("digite outro nome: ")
if (nome1 < nome2):
	print(nome1)
	print(nome2.upper())
else:
	print(nome2)
	print(nome1.upper())

-- OUTPUT:
Ada
LEON
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-13 14:45:39) 
-- CODE:
nome1 =input("digite o nome: ")
nome2 =input("digite outro nome: ")
if (nome1 < nome2):
	print(nome1)
	print(nome2.upper())
else:
	print(nome2)
	print(nome1.upper())

-- EXECUTION TIME:
0.174586
-- TEST CASE 1:
---- input:
Ada
Leon
---- correct output:
Ada
Leon
---- user output:
Ada
LEON
-- TEST CASE 2:
---- input:
Marcos
Demetrius
---- correct output:
Demetrius
Marcos
---- user output:
Demetrius
MARCOS
-- TEST CASE 3:
---- input:
WILSON
george
---- correct output:
george
WILSON
---- user output:
WILSON
GEORGE
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 14:46:01) 
-- CODE:
nome1 =input("digite o nome: ")
nome2 =input("digite outro nome: ")
if (nome1 < nome2):
	print(nome1.upper())
	print(nome2.upper())
else:
	print(nome2.upper())
	print(nome1.upper())

-- OUTPUT:
ADA
LEON
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 14:46:42) 
-- CODE:
nome1 =input("digite o nome: ")
nome2 =input("digite outro nome: ")
if (nome1 < nome2):
	print(nome1.upper())
	print(nome2.upper())
else:
	print(nome2.upper())
	print(nome1.upper())

-- OUTPUT:
ADA
LEON
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 14:46:53) 
-- CODE:
nome1 =input("digite o nome: ")
nome2 =input("digite outro nome: ")
if (nome1 < nome2):
	print(nome1.upper())
	print(nome2.upper())
else:
	print(nome2.upper())
	print(nome1.upper())

-- OUTPUT:
ADA
LEON
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 14:47:06) 
-- CODE:
nome1 =input("digite o nome: ")
nome2 =input("digite outro nome: ")
if (nome1 < nome2):
	print(nome1.upper())
	print(nome2.upper())
else:
	print(nome2.upper())
	print(nome1.upper())

-- OUTPUT:
ADA
LEON
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 14:47:22) 
-- CODE:
nome1 =input("digite o nome: ")
nome2 =input("digite outro nome: ")
if (nome1 < nome2):
	print(nome1.upper())
	print(nome2.upper())
else:
	print(nome2.upper())
	print(nome1.upper())

-- OUTPUT:
ADA
LEON
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-13 14:47:34) 
-- CODE:
nome1 =input("digite o nome: ")
nome2 =input("digite outro nome: ")
if (nome1 < nome2):
	print(nome1.upper())
	print(nome2.upper())
else:
	print(nome2.upper())
	print(nome1.upper())

-- EXECUTION TIME:
0.138274
-- TEST CASE 1:
---- input:
Ada
Leon
---- correct output:
Ada
Leon
---- user output:
ADA
LEON
-- TEST CASE 2:
---- input:
Marcos
Demetrius
---- correct output:
Demetrius
Marcos
---- user output:
DEMETRIUS
MARCOS
-- TEST CASE 3:
---- input:
WILSON
george
---- correct output:
george
WILSON
---- user output:
WILSON
GEORGE
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-13 14:47:48) 
-- CODE:
nome1 =input("digite o nome: ")
nome2 =input("digite outro nome: ")
if (nome1 < nome2):
	print(nome1.upper())
	print(nome2.upper())
else:
	print(nome2.upper())
	print(nome1.upper())

-- EXECUTION TIME:
0.139947
-- TEST CASE 1:
---- input:
Ada
Leon
---- correct output:
Ada
Leon
---- user output:
ADA
LEON
-- TEST CASE 2:
---- input:
Marcos
Demetrius
---- correct output:
Demetrius
Marcos
---- user output:
DEMETRIUS
MARCOS
-- TEST CASE 3:
---- input:
WILSON
george
---- correct output:
george
WILSON
---- user output:
WILSON
GEORGE
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 14:47:49) 
-- CODE:
nome1 =input("digite o nome: ")
nome2 =input("digite outro nome: ")
if (nome1 < nome2):
	print(nome1.upper())
	print(nome2.upper())
else:
	print(nome2.upper())
	print(nome1.upper())

-- OUTPUT:
ADA
LEON
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 14:48:31) 
-- CODE:
nome1 =input("digite o nome: ")
nome2 =input("digite outro nome: ")
if (nome1 > nome2):
	print(nome1.upper())
	print(nome2.upper())
else:
	print(nome2.upper())
	print(nome1.upper())

-- OUTPUT:
LEON
ADA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 14:48:51) 
-- CODE:
nome1 =input("digite o nome: ")
nome2 =input("digite outro nome: ")
if (nome1 > nome2):
	print(nome1.upper())
	print(nome2.upper())
else:
	print(nome2.upper())
	print(nome1.upper())

-- OUTPUT:
LEON
ADA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-13 15:39:09) 
-- CODE:
a = input("digite o nome: ")
b = input("digite outro nome: ")
if (a<b.upper())
	print(a)
	print(b)
else:
	print(b)
	print(a)

-- EXECUTION TIME:
0.129939
-- ERROR:
  File "/home/codebench/codes/1638/2450/main.py", line 3
    if (a<b.upper())
                   ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-13 15:39:11) 
-- CODE:
a = input("digite o nome: ")
b = input("digite outro nome: ")
if (a<b.upper())
	print(a)
	print(b)
else:
	print(b)
	print(a)

-- EXECUTION TIME:
0.131284
-- ERROR:
  File "/home/codebench/codes/1638/2450/main.py", line 3
    if (a<b.upper())
                   ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-13 15:39:41) 
-- CODE:
a = input("digite o nome: ")
b = input("digite outro nome: ")
if (a<b.upper()):
	print(a)
	print(b)
else:
	print(b)
	print(a)

-- EXECUTION TIME:
0.192078
-- TEST CASE 1:
---- input:
Ada
Leon
---- correct output:
Ada
Leon
---- user output:
Ada
Leon
-- TEST CASE 2:
---- input:
Marcos
Demetrius
---- correct output:
Demetrius
Marcos
---- user output:
Demetrius
Marcos
-- TEST CASE 3:
---- input:
WILSON
george
---- correct output:
george
WILSON
---- user output:
george
WILSON
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
